--- a/.gitignore
+++ b/.gitignore
@@ -210,4 +210,7 @@ $RECYCLE.BIN/
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+#SQL server files
+*.mdf
+*.ldf
 
